
[TestNoStringError/invalid-0 - 1]
Diagnostic 1: stringError (3:1 - 3:13)
Message: String(error) is banned: it prints [object Object] for anything that is not already a string.
Help: Use serializeError(error).message from the serialize-error package instead.
   2 | declare const error: Error;
   3 | String(error);
     | ~~~~~~~~~~~~~
   4 |       
---

[TestNoStringError/invalid-1 - 1]
Diagnostic 1: stringError (3:1 - 3:13)
Message: String(value) is banned: it prints [object Object] for anything that is not already a string.
Help: Use serializeError(value).message from the serialize-error package instead.
   2 | declare const value: { a: number };
   3 | String(value);
     | ~~~~~~~~~~~~~
   4 |       
---

[TestNoStringError/invalid-2 - 1]
Diagnostic 1: stringError (3:1 - 3:15)
Message: String(payload) is banned: it prints [object Object] for anything that is not already a string.
Help: Use serializeError(payload).message from the serialize-error package instead.
   2 | declare const payload: { code: number };
   3 | String(payload);
     | ~~~~~~~~~~~~~~~
   4 |       
---

[TestNoStringError/invalid-3 - 1]
Diagnostic 1: stringError (3:1 - 3:13)
Message: String(value) is banned: it prints [object Object] for anything that is not already a string.
Help: Use serializeError(value).message from the serialize-error package instead.
   2 | declare const value: string | Error;
   3 | String(value);
     | ~~~~~~~~~~~~~
   4 |       
---
